<resources>
    <string name="app_name">Ten twenty app</string>

    <string name="loading">Loading</string>
    <string name="image_thumbnail">Image</string>
    <string name="seat_selection">Seat selection</string>
    <string name="screen_here">Screen here</string>


    <string name="book_text">Book <b>%s</b></string>
    <string name="no_show_times_available">No movie shows available</string>
    <string name="card_number">Card number</string>
    <string name="card_name">Card Name</string>
    <string name="submit">Submit</string>
    <string name="valid_till">Valid till</string>
    <string name="valid_from">Valid from</string>
    <string name="card_cvv">CVV</string>
    <string name="invalid_seat">Invalid Seat number please reselect seat</string>
    <string name="error_validate_input_payment">Please enter all the details</string>
    <string name="unknown_source">Unknown Source</string>
    <string name="invalid_showtime">ShowTime not found please reselect showtime</string>
    <string name="booking_success">Booked successfully</string>
    <string name="book">Book</string>
    <string name="encrypted_data">Encrypted data :\n</string>
    <string name="actual_data">Actual data :\n</string>
</resources>
